@@ -1,3 +1,8 @@
+Wed Oct 27 21:33:19 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * release.sh: remove attic/ and doc/obsolete/
+  * dpkg-gencontrol: add "Source" to the fields placed in the control file
+
 Tue Oct 26 19:35:53 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Also translate helpmessages for dselect
